# smarc_stonefish_sims

./: .gitignore  CMakeLists.txt  README.md  lolo_stonefish_sim.rosinstall  package.xml  release_packages.yaml  sam_stonefish_sim.rosinstall  smarc_stonefish_sims.rosinstall
.github/workflows/: main.yml  release.yml  test-release.yml
algae_world/: CMakeLists.txt  package.xml
algae_world/config/: algae.yaml
algae_world/launch/: algae.launch
algae_world/scripts/: bringup_sam.sh
config/: algae.yaml  sam_biograd.yaml  sam_biograd_3_auvs.yaml  sam_biograd_4_auvs.yaml  sam_biograd_5_auvs.yaml
data/algae/: algae_env.scn  rope.scn
data/algae/algae_cube/: 135.mtl
data/algae/components/: a0_buoy_rope.mtl
data/algae/scripts/: algae_gen.py  env_gen.py  main.py  parser.py
data/asko_world/: Notes.txt  asko_env.scn
data/biograd_world/: biograd_env.scn
data/lolo_auv/: lolo_auv.xml
data/sam_auv/: sam_auv.scn  sam_auv.xml  sam_auv_hd.xml  sam_auv_no_payload_sensors.xml
data/scenarios/: default.scn  default_2_auvs.scn  default_3_auvs.scn  default_4_auvs.scn  default_5_auvs.scn  multiple_sams_biograd_hd.scn  sam_asko_hd.scn  sam_asko_hd_2.scn  sam_asko_hd_3.scn  sam_asko_hd_4.scn  sam_asko_hd_5.scn  sam_biograd.scn  sam_biograd_hd.scn  sam_biograd_hd_2.scn  sam_biograd_hd_3.scn  sam_biograd_hd_4.scn  sam_biograd_hd_5.scn
data/urdf/: sam_auv.urdf.xacro
launch/: algae.launch  attitude_controllers.launch  base_simulator.launch  base_simulator_extras.launch  controller.launch  lolo_sam_simulator.launch  mission.launch  mission_simulator.launch  navigator.launch  robot_bridge.launch  robot_bridge_simulator.launch  ros_simulator.launch  sam_simulator.launch  sim_mission.launch  simulator.launch  stonefish.launch  vbs_controller.launch
lolo_stonefish_sim/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  lolo_stonefish_sim.rosinstall  package.xml
lolo_stonefish_sim/config/: lolo.yaml  lolo_biograd.yaml  lolo_sam.yaml  lolo_sam_biograd.yaml
lolo_stonefish_sim/launch/: lolo_sam_simulator.launch  mission.launch  robot_bridge.launch  simulator.launch
lolo_stonefish_sim/scripts/: bringup.sh  lolo_sam_bringup.sh  lolo_teleop.py  sim_to_control_surface_fb.py  sim_to_ins.py
lolo_stonefish_sim/src/: lolo_sim_msg_bridge.cpp  sim_yaw_controller_node.cpp
rosinstall/: sam_sim.rosinstall  sam_sim_private.rosinstall
sam_stonefish_sim/: CHANGELOG.rst  CMakeLists.txt  LICENSE  package.xml
sam_stonefish_sim/config/: sam.yaml  sam_2_auvs.yaml  sam_3_auvs.yaml  sam_4_auvs.yaml  sam_5_auvs.yaml  sam_biograd_2_auvs.yaml  sam_biograd_3_auvs.yaml  sam_biograd_4_auvs.yaml  sam_biograd_5_auvs.yaml  sam_biograd_no_payload_sensors.yaml  sam_kristineberg.yaml  sam_no_payload_sensors.yaml
sam_stonefish_sim/data/biograd_world/: biograd_env.scn
sam_stonefish_sim/data/sam_auv/: sam_auv.xml  sam_auv_no_payload_sensors.xml
sam_stonefish_sim/launch/: compress_images.launch  mission.launch  ned_to_enu_imu.launch  robot_bridge.launch  simulator.launch  stonefish.launch  vbs_controller.launch
sam_stonefish_sim/scripts/: bezier_planner.py  bringup.sh  carrot_controller.py  odom_gt_prov.py  sam_teleop.py
sam_stonefish_sim/src/: sam_sim_msg_bridge.cpp  sim_waypoint_nav.cpp
scripts/: bezier_planner.py  bringup.sh  carrot_controller.py  lolo_teleop.py  odom_gt_prov.py  sam_sim_msg_bridge.py  sam_teleop.py
smarc_stonefish_worlds/: CHANGELOG.rst  CMakeLists.txt  package.xml
smarc_stonefish_worlds/config/: algae.yaml  algae_world.yaml  algae_world_small.yaml  biograd_world.yaml  kristineberg_world.yaml
smarc_stonefish_worlds/launch/: algae.launch  stonefish.launch
smarc_stonefish_worlds/scripts/: sim_sss_detection_publisher.py
smarc_stonefish_worlds/src/: rotate_imu_orientation.cpp  sim_utm_offset_publisher.cpp
src/: lolo_sim_msg_bridge.cpp  sam_sim_msg_bridge.cpp  sim_waypoint_nav.cpp  sim_yaw_controller_node.cpp
(+18 files in other folders)
