<?xml version="1.0"?>
<package format="2">
  <name>sam_stonefish_sim</name>
  <version>0.1.25</version>
  <description>The sam_stonefish_sim package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nilsbore@gmail.com">Nils Bore</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/sam_stonefish_sim</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cola2_msgs</depend>
  <depend>sam_msgs</depend>
  <depend>smarc_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>stonefish_ros</exec_depend>
  <exec_depend>smarc_stonefish_worlds</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>imu_transformer</exec_depend>
  <exec_depend>tf_lat_lon</exec_depend>
  <exec_depend>smarc_bt</exec_depend>
  <exec_depend>pid</exec_depend>
  <exec_depend>sam_description</exec_depend>
  <exec_depend>imc_ros_bridge</exec_depend>
  <exec_depend>tmux</exec_depend>
  <exec_depend>rosmon</exec_depend>
  <exec_depend>tf_convenience_topics</exec_depend>
  <exec_depend>sam_basic_controllers</exec_depend>
  <exec_depend>sam_dead_reckoning</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>image_transport_plugins</exec_depend>
  <!-- <exec_depend>sam_webgui_native</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
